a link color for dark mode corrected

--- a/styles/scss/partials/_generic.scss
+++ b/styles/scss/partials/_generic.scss
@@ -38,7 +38,7 @@ address::selection {
 }
 
 a {
-  color: black;
+  color: var(--color-font);
   text-decoration: none;
   transition: color 0.3s ease;
 }
